src/index.css
@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Lato:wght@100;300;400;700;900&display=swap');

*,
:after,
:before {
  margin: 0;
  box-sizing: inherit;
}

:root {
  --sidebar-bgColor: #3f0e40;
  --sidebar-textColor: #bcabbc;
  --header-bgColor: #350d36;
  --menu-textColor: rgb(29, 28, 29);
}

body {
  font-size: 15px;
  font-family: 'Roboto', 'Lato', sans-serif;
  box-sizing: border-box;
}

.app__body {
  display: flex;
  height: calc(100vh - 38px);
}

.app__spinner {
  width: 100vw;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.login {
  background-color: #fff;
}

.login__header {
  width: 100%;
  padding: 48px 0 40px;
}

.login__header__bar {
  height: 39px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.login__header--center {
  text-align: center;
}

.login__header--center > img {
  object-fit: contain;
  height: 34px;
}

.login__header--right {
  font-size: 13px;
  color: #616061;
  text-align: right;
  padding-right: 40px;
  height: 100%;
  display: grid;
}

@media only screen and (max-width: 490px) {
  .login__header--right {
    display: none;
  }
}

.login__header--signup {
  color: #1264a3;
  font-weight: 700;
  text-decoration: none;
}

.login__header--signup:hover {
  text-decoration: underline;
}

.login__container {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  flex-shrink: 0;
  align-items: center;
  margin: 0 auto;
  width: 100%;
  max-width: 800px;
  text-align: center;
  background-color: inherit;
  border: none;
}

.login__header-text--top {
  font-size: 48px;
  font-weight: 500;
  line-height: 46px;
  margin-bottom: 10px;
}

.login__header-text--bottom {
  font-size: 18px;
  font-weight: 400;
  margin-bottom: 32px;
}

@media only screen and (max-width: 490px) {
  .login__header-text--top {
    font-size: 32px;
  }

  .login__header-text--bottom {
    font-size: 15px;
    padding: 0 10px;
  }
}

.login__signins {
  width: 400px;
}

@media only screen and (max-width: 400px) {
  .login__signins {
    width: 100%;
    min-width: 300px;
    padding: 0 10px;
  }
}

.login__signins > button {
  width: 100%;
  height: 44px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #fff;
  color: #4285f4;
  border: 1px solid #4285f4;
}

.login__signins > button:hover {
  background-color: #fff;
  box-shadow: 0 1px 4px rgb(0 0 0 / 30%);
}

.login__signins > button > img {
  width: 18px;
  height: 18px;
  margin-right: 12px;
  margin-bottom: 4px;
}

.login__signins > button > span {
  font-size: 18px;
  font-weight: 700;
  text-transform: initial;
}

#login__github {
  margin-top: 16px;
  border: 2px solid rgba(29, 28, 29, 1);
  color: rgba(29, 28, 29, 1);
}

.login__divider {
  width: 100%;
  display: flex;
  align-items: center;
  margin: 24px 0;
  color: #1d1c1d;
}

.login__divider > hr {
  flex-grow: 1;
  margin: 0;
  border: none;
  border-top: 1px solid #ddd;
}

.login__divider--content {
  padding: 0 20px;
}

.login__footer {
  padding: 32px 0;
  width: 100%;
}

.login__footer ul {
  list-style: none;
  padding-inline-start: 0;
  display: flex;
  gap: 10px;
  font-size: 15px;
  color: #696969;
}

@media only screen and (max-width: 490px) {
  .login__footer ul {
    font-size: 12px;
    gap: 5px;
  }
}

.login__footer ul li {
  flex-grow: 1;
  cursor: pointer;
}

.login__footer ul li:hover {
  outline: none;
  text-decoration: underline;
  color: #0b4c8c;
}

.login__footer--region {
  display: flex;
  align-items: center;
  margin: 0;
  padding: 0;
}

.login__footer--region > .MuiSvgIcon-root {
  height: 18px !important;
  padding: 0 !important;
  margin: 0 !important;
}

@media only screen and (max-width: 490px) {
  .login__footer--region > .MuiSvgIcon-root {
    display: none;
  }
}

.not-found {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.not-found__code {
  font-size: 4rem;
  color: #86a8e7;
}

.not-found__title {
  font-size: 4rem;
  color: #666666;
}

.not-found__description {
  font-size: 1.3rem;
  margin: 10px 0 20px;
}

